updated EventResponseDto, added /v2/{eventId} endpoint